code changes as part of upgrades