@@ -1,17 +1,13 @@
 package com.learning.emsmybatisliquibase.service.impl;
 
 import com.learning.emsmybatisliquibase.dao.EmployeeDao;
-import com.learning.emsmybatisliquibase.dao.OtpDao;
 import com.learning.emsmybatisliquibase.dao.PasswordDao;
 import com.learning.emsmybatisliquibase.dto.ForgotPasswordDto;
 import com.learning.emsmybatisliquibase.dto.PasswordDto;
 import com.learning.emsmybatisliquibase.dto.ResetPasswordDto;
 import com.learning.emsmybatisliquibase.dto.SuccessResponseDto;
-import com.learning.emsmybatisliquibase.dto.pagination.RequestQuery;
 import com.learning.emsmybatisliquibase.entity.Employee;
-import com.learning.emsmybatisliquibase.entity.OtpAuth;
 import com.learning.emsmybatisliquibase.entity.Password;
-import com.learning.emsmybatisliquibase.entity.enums.OtpAuthStatus;
 import com.learning.emsmybatisliquibase.entity.enums.OtpAuthType;
 import com.learning.emsmybatisliquibase.entity.enums.PasswordStatus;
 import com.learning.emsmybatisliquibase.exception.IntegrityException;
@@ -27,7 +23,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Instant;
-import java.util.List;
 import java.util.UUID;
 
 import static com.learning.emsmybatisliquibase.exception.errorcodes.EmployeeErrorCodes.*;
@@ -133,7 +128,7 @@ public class PasswordServiceImpl implements PasswordService {
     public SuccessResponseDto resetPassword(ResetPasswordDto resetPasswordDto) {
         var employee = getByEmail(resetPasswordDto.getEmail().trim());
         var passwords = passwordDao.getByEmployeeUuidAndStatus(employee.getUuid(), PasswordStatus.ACTIVE);
-        if (!passwordEncoder.matches(resetPasswordDto.getOldPassword(), passwords.get(0).getPassword())) {
+        if (!passwordEncoder.matches(resetPasswordDto.getOldPassword(), passwords.getFirst().getPassword())) {
             throw new InvalidInputException(PASSWORD_NOT_MATCHED.code(), "Entered Password in Incorrect");
         }
         passwords.forEach(password -> {
